# libwurfl

./: .cproject  .gitignore  .project  Makefile  Makefile.am  Makefile.in  README.md  THANKS  aclocal.m4  config.h  config.h.in  configure  configure.ac  configure.scan  cwurfl  device.c  device.h  devicedefinition.c  devicehierarchy.c  libtool  repository.c  repository.h  test  wurfl.h
Debug/: device.d  makefile  objects.mk  repository.d  sources.mk  subdir.mk
Debug/avl/: subdir.mk
Debug/collection/: hashlib.d  hashmap.d  list.d  subdir.mk
Debug/parser/: sax.d  subdir.mk
collection/: collections.h  hashlib.c  hashlib.h  hashmap.c  hashmap.h  hashset.c  hashset.h  linkedlist.c  linkedlist.h  linkedlist_impl.h  list.c  list.h  list_impl.h  treeset.c  treeset.h  utils.c
etc/: root.xml  user_agent_entries.txt
parser/: parser.h  sax.c
resource/: devicedef.c  repository.c  repository.h  resource-impl.h  resource.h  sax.c
src/: Makefile  Makefile.am  Makefile.in  commons.h  config.h.in  configure.scan  device-impl.h  device.c  device.h  devicedef.c  devicedef.h  libwurfl.la  libwurfl_la-chain.lo  libwurfl_la-device.lo  libwurfl_la-devicedef.lo  libwurfl_la-functors.lo  libwurfl_la-hashmap.lo  libwurfl_la-hashtable.lo  libwurfl_la-linkedlist.lo  libwurfl_la-logger.lo  libwurfl_la-repository.lo  libwurfl_la-sax2.lo  libwurfl_la-utils.lo  libwurfl_la-wurfl.lo  matcher.c  matcher.h  normalizer.c  normalizer.h  parser.h  repository.c  repository.h  request.h  resource.h  sax2.c  test  test-static  test.c  unit-test.c  wurfl.c  wurfl.h  (+1 more)
src/collection/: collections.h  hashlib.c  hashmap.c  hashmap.h  hashset.c  hashset.h  linkedlist.h  linkedlist_impl.h  treeset.c  treeset.h  utils.c
src/datrie/: trie.c  triedefs.h
src/gnulib/: error.c  subdir.mk
src/main/: device.c  device.h  request.h
src/main/collection/: collections.h  hashmap.c  hashmap.h  hashset.c  linkedlist.c  linkedlist.h
src/main/repository/: devicedef.c  devicedef.h  hierarchy-impl.h  hierarchy.h  repository.c  repository.h
src/main/resource/: resource-impl.h  resource.h  sax.c
src/matcher/: matcher-test.c  matcher-test.h  matcher.c  matcher.h  subdir.mk
src/repository/: device-impl.h  device.c  device.h  devicedef-impl.h  devicedef.c  devicedef.h  devicedefs.c  hierarchy-impl.h  hierarchy.c  hierarchy.h  repository-test.c  repository-test.h  repository.c  repository.h  resource-impl.h  resource.h  sax2.c  subdir.mk
src/resource/: devicedef-impl.h  devicedef.c  devicedef.h  devicehierarchy.c  repository.c  repository.h  resource-impl.h  resource.c  resource.h  sax.c  sax2.c  subdir.mk
src/test/: test.c  unit-test.c
src/test/collection/: hashset-test.c  hashset-test.h
src/test/repository/: repository-test.c
src/utils/: chain.c  chain.h  cqueue-test.c  cqueue-test.h  cqueue.c  cqueue.h  error.c  error.h  functors.c  functors.h  getline.c  hashmap-impl.h  hashmap.c  hashmap.h  hashtable-impl.h  hashtable.c  hashtable.h  linkedlist-impl.h  linkedlist.c  linkedlist.h  logger.c  logger.h  patricia.c  patricia.h  predicates.h  subdir.mk  trie-test.c  utils.c  utils.h
src/utils/avl/: pavl.c  pavl.h  subdir.mk
src/utils/collection/: array.c  array.h  collections-impl.h  collections.h  dqbuffer.c  dqbuffer.h  functors.c  functors.h  hashmap.c  hashmap.h  hashset-test.c  hashset-test.h  hashset.c  hashset.h  hashtable-impl.h  hashtable-test.c  hashtable-test.h  hashtable.c  hashtable.h  linkedlist-impl.h  linkedlist.c  linkedlist.h  linkedlist_impl.h  predicates.h  subdir.mk  utils.c  utils.h
src/utils/hashlib/: cokusmt.h  hashlib-test.c  hashlib.c  hashlib.h  subdir.mk
src/utils/memory/: allocator-impl.h  allocator-linux.c  allocator-win32.c  allocator.c  allocator.h  subdir.mk
src/utils/process/: process-linux.c  process-win32.c  process.h  subdir.mk
src/utils/thread/: cv-pthread.c  cv-win32.c  mutex-pthread.c  mutex-win32.c  subdir.mk  thread-pthread-impl.h  thread-pthread.c  thread-win32-impl.h  thread-win32.c  thread.h
