# Copyright (C) 2011 Fantayeneh Asres Gizaw, Filippo De Luca
#   
# This file is part of libWURFL.
# 
# libWURFL is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or 
# any later version.
# 
# libWURFL is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with Foobar.  If not, see <http://www.gnu.org/licenses/>.

SUBDIRS = src
ACLOCAL_AMFLAGS = -I m4
